--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <title>a webpage created randomly</title>
     </head>
     <body>
-        <b>yeet first demo</b>
+        <b>first demo full version with flaws</b>
         <video controls>
             <source src = "MyRec_0904_1416 (online-audio-converter.com).mp4" type = "video/mp4">
         </video>
         <video controls>
-            <source src = "AnyConv.com__trimtrimMyRec_0904_2157.mp4" type = "video/mp4">
+            <source src = "AnyConv.com__MyRec_0905_0723.mp4" type = "video/mp4">
         </video>
+
     </body>
 </html>
